[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlang"
description = "A DSL for Decision-Processes."
readme = "README.md"
authors = [
  { name = "Benjamin Spiegel", email = "bspiegel@cs.brown.edu" },
  { name = "Rafael Rodriguez Sanchez", email = "rrs@brown.edu" },
  { name = "Jennifer Wang", email = "jennifer_wang2@brown.edu" },
]
maintainers = [
  { name = "Benjamin Spiegel", email = "bspiegel@cs.brown.edu" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"

dependencies = [
  "numpy>=1.13.3",
]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
]

[project.urls]
Homepage = "http://rlang.ai/"
Documentation = "http://rlang.ai/"