[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rlang"
version = "1.0.0"
description = "A DSL for Decision-Processes."
readme = "README.md"
authors = [
  { name = "Benjamin Spiegel", email = "bspiegel@cs.brown.edu" },
  { name = "Rafael Rodriguez Sanchez", email = "rrs@brown.edu" },
  { name = "Jennifer Wang", email = "jennifer_wang2@brown.edu" },
]
maintainers = [
  { name = "Benjamin Spiegel", email = "bspiegel@cs.brown.edu" },
]
license = { file = "LICENSE" }
requires-python = ">=3.7"

# We should revisit these dependencies, they may not be necessary after the refactor.
dependencies = [
  "ale_py==0.7.3",
  "antlr_denter==1.3.1",
#  "gym==0.21.0",
  "numpy==1.21.6",
#  "simple_rl==0.811",
  "matplotlib==3.5.1",
  "antlr4-python3-runtime==4.9.2",
#  "box2d-py==2.3.8",
  "importlib-metadata<5.0",
  "torch>=1.12.0",
  "prettytable"
]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
]

[project.urls]
Homepage = "http://rlang.ai/"
Documentation = "http://rlang.ai/"
